--- a/Quiz2.ipynb
+++ b/Quiz2.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Quiz2.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyMQN5Oxv5dDbL5EpJiKHP4N",
       "include_colab_link": true
     },
@@ -72,7 +73,7 @@
         "id": "kap8ySnIX3oN",
         "outputId": "e84adfca-3278-467d-d0e9-738425bfd37c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
