--- a/Finalexam.ipynb
+++ b/Finalexam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Finalexam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOW4E6tPwY1h2SPV22v2x8D",
+      "authorship_tag": "ABX9TyNkioQdPtKNVLPhscRFImMI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,136 +29,113 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "oY7OCeWz7O9k"
-      },
-      "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "def uniform_crossover(A,B,P):\n",
-        "  for i in range (len(P)):\n",
-        "    if [P] < 0.5:\n",
-        "      temp = A[i]\n",
-        "      A[i] = B[i]\n",
-        "      B[i]= temp\n",
-        "  return A, B\n",
-        "\n",
-        "  A = np.array([1,2,3,4,5,6,7,8,9,0])\n",
-        "  B = np.array([0,9,8,7,6,5,4,3,2,1])\n",
-        "  p = np.random.rand(10)\n",
-        "  uniform_crossover(A,B,P)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# create the next generation\n",
-        "children = list()\n",
-        "for i in range(0, n_pop, 2):\n",
-        "\t# get selected parents in pairs\n",
-        "\tp1, p2 = selected[i], selected[i+1]\n",
-        "\t# crossover and mutation\n",
-        "\tfor c in crossover(p1, p2, r_cross):\n",
-        "\t\t# mutation\n",
-        "\t\tmutation(c, r_mut)\n",
-        "\t\t# store for next generation\n",
-        "\t\tchildren.append(c)"
-      ],
-      "metadata": {
-        "id": "nSWb6RJP_y4K"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# library to generate a random number\n",
-        "import random\n",
-        "  \n",
-        "# function for implementing the single-point crossover\n",
-        "def crossover(l, q):\n",
-        "  \n",
-        "# converting the string to list for performing the crossover\n",
-        "    l = list(l)\n",
-        "    q = list(q)\n",
-        "  \n",
-        "# generating the random number to perform crossover\n",
-        "    k = random.randint(0, 15)\n",
-        "    print(\"Crossover point :\", k)\n",
-        "  \n",
-        "# interchanging the genes\n",
-        "    for i in range(k, len(s)):\n",
-        "        l[i], q[i] = q[i], l[i]\n",
-        "    l = ''.join(l)\n",
-        "    q = ''.join(q)\n",
-        "    print(l)\n",
-        "    print(q, \"\\n\\n\")\n",
-        "    return l, q\n",
-        "  \n",
-        "  \n",
-        "# patent chromosomes:\n",
-        "  \n",
-        "s = '1101111011'\n",
-        "p = '1101111001'\n",
-        "print(\"Parents\")\n",
-        "print(\"P1 :\", s)\n",
-        "print(\"P2 :\", p, \"\\n\")\n",
-        "  \n",
-        "# function calling and storing the off springs for \n",
-        "# next generation crossover\n",
-        "for i in range(5):\n",
-        "    print(\"Generation \", i+1, \"Childrens :\")\n",
-        "    s, p = crossover(s, p)"
+        "from numpy.random import randint\n",
+        "from numpy.random import rand\n",
+        " \n",
+        "# objective function\n",
+        "def onemax(x):\n",
+        "\treturn -sum(x)\n",
+        " \n",
+        "# tournament selection\n",
+        "def selection(pop, scores, k=3):\n",
+        "\t# first random selection\n",
+        "\tselection_ix = randint(len(pop))\n",
+        "\tfor ix in randint(0, len(pop), k-1):\n",
+        "\t\t# check if better (e.g. perform a tournament)\n",
+        "\t\tif scores[ix] < scores[selection_ix]:\n",
+        "\t\t\tselection_ix = ix\n",
+        "\treturn pop[selection_ix]\n",
+        " \n",
+        "# crossover two parents to create two children\n",
+        "def crossover(p1, p2, r_cross):\n",
+        "\t# children are copies of parents by default\n",
+        "\tc1, c2 = p1.copy(), p2.copy()\n",
+        "\t# check for recombination\n",
+        "\tif rand() < r_cross:\n",
+        "\t\t# select crossover point that is not on the end of the string\n",
+        "\t\tpt = randint(1, len(p1)-2)\n",
+        "\t\t# perform crossover\n",
+        "\t\tc1 = p1[:pt] + p2[pt:]\n",
+        "\t\tc2 = p2[:pt] + p1[pt:]\n",
+        "\treturn [c1, c2]\n",
+        " \n",
+        "# mutation operator\n",
+        "def mutation(bitstring, r_mut):\n",
+        "\tfor i in range(len(bitstring)):\n",
+        "\t\t# check for a mutation\n",
+        "\t\tif rand() < r_mut:\n",
+        "\t\t\t# flip the bit\n",
+        "\t\t\tbitstring[i] = 1 - bitstring[i]\n",
+        " \n",
+        "# genetic algorithm\n",
+        "def genetic_algorithm(objective, n_bits, n_iter, n_pop, r_cross, r_mut):\n",
+        "\t# initial population of random bitstring\n",
+        "\tpop = [randint(0, 2, n_bits).tolist() for _ in range(n_pop)]\n",
+        "\t# keep track of best solution\n",
+        "\tbest, best_eval = 0, objective(pop[0])\n",
+        "\t# enumerate generations\n",
+        "\tfor gen in range(n_iter):\n",
+        "\t\t# evaluate all candidates in the population\n",
+        "\t\tscores = [objective(c) for c in pop]\n",
+        "\t\t# check for new best solution\n",
+        "\t\tfor i in range(n_pop):\n",
+        "\t\t\tif scores[i] < best_eval:\n",
+        "\t\t\t\tbest, best_eval = pop[i], scores[i]\n",
+        "\t\t\t\tprint(\">%d, new best f(%s) = %.3f\" % (gen,  pop[i], scores[i]))\n",
+        "\t\t# select parents\n",
+        "\t\tselected = [selection(pop, scores) for _ in range(n_pop)]\n",
+        "\t\t# create the next generation\n",
+        "\t\tchildren = list()\n",
+        "\t\tfor i in range(0, n_pop, 2):\n",
+        "\t\t\t# get selected parents in pairs\n",
+        "\t\t\tp1, p2 = selected[i], selected[i+1]\n",
+        "\t\t\t# crossover and mutation\n",
+        "\t\t\tfor c in crossover(p1, p2, r_cross):\n",
+        "\t\t\t\t# mutation\n",
+        "\t\t\t\tmutation(c, r_mut)\n",
+        "\t\t\t\t# store for next generation\n",
+        "\t\t\t\tchildren.append(c)\n",
+        "\t\t# replace population\n",
+        "\t\tpop = children\n",
+        "\treturn [best, best_eval]\n",
+        " \n",
+        "# define the total iterations\n",
+        "n_iter = 17\n",
+        "# bits\n",
+        "n_bits = 20\n",
+        "# define the population size\n",
+        "n_pop = 16\n",
+        "# crossover rate\n",
+        "r_cross = 0.9\n",
+        "# mutation rate\n",
+        "r_mut = 1.0 / float(n_bits)\n",
+        "# perform the genetic algorithm search\n",
+        "best, score = genetic_algorithm(onemax, n_bits, n_iter, n_pop, r_cross, r_mut)\n",
+        "print('Done!')\n",
+        "print('f(%s) = %f' % (best, score))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uphR0HJ-AYqN",
-        "outputId": "adcc7deb-ab4b-4160-cad2-baa2f1d6fc5c"
+        "id": "0h6B57_XBmEc",
+        "outputId": "f92c2751-a184-42d4-ebca-c5d74128f309"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Parents\n",
-            "P1 : 1101111011\n",
-            "P2 : 1101111001 \n",
-            "\n",
-            "Generation  1 Childrens :\n",
-            "Crossover point : 12\n",
-            "1101111011\n",
-            "1101111001 \n",
-            "\n",
-            "\n",
-            "Generation  2 Childrens :\n",
-            "Crossover point : 3\n",
-            "1101111001\n",
-            "1101111011 \n",
-            "\n",
-            "\n",
-            "Generation  3 Childrens :\n",
-            "Crossover point : 15\n",
-            "1101111001\n",
-            "1101111011 \n",
-            "\n",
-            "\n",
-            "Generation  4 Childrens :\n",
-            "Crossover point : 2\n",
-            "1101111011\n",
-            "1101111001 \n",
-            "\n",
-            "\n",
-            "Generation  5 Childrens :\n",
-            "Crossover point : 10\n",
-            "1101111011\n",
-            "1101111001 \n",
-            "\n",
-            "\n"
+            ">3, new best f([0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0]) = -15.000\n",
+            ">4, new best f([1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0]) = -16.000\n",
+            ">4, new best f([1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1]) = -17.000\n",
+            ">7, new best f([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1]) = -18.000\n",
+            ">10, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0]) = -19.000\n",
+            ">12, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -20.000\n",
+            "Done!\n",
+            "f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -20.000000\n"
           ]
         }
       ]
