--- a/Finalexam.ipynb
+++ b/Finalexam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Finalexam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkioQdPtKNVLPhscRFImMI",
+      "authorship_tag": "ABX9TyPn0+zuixglt+WHQSBSIfwm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,115 +30,75 @@
     {
       "cell_type": "code",
       "source": [
-        "from numpy.random import randint\n",
-        "from numpy.random import rand\n",
-        " \n",
-        "# objective function\n",
-        "def onemax(x):\n",
-        "\treturn -sum(x)\n",
-        " \n",
-        "# tournament selection\n",
-        "def selection(pop, scores, k=3):\n",
-        "\t# first random selection\n",
-        "\tselection_ix = randint(len(pop))\n",
-        "\tfor ix in randint(0, len(pop), k-1):\n",
-        "\t\t# check if better (e.g. perform a tournament)\n",
-        "\t\tif scores[ix] < scores[selection_ix]:\n",
-        "\t\t\tselection_ix = ix\n",
-        "\treturn pop[selection_ix]\n",
-        " \n",
-        "# crossover two parents to create two children\n",
-        "def crossover(p1, p2, r_cross):\n",
-        "\t# children are copies of parents by default\n",
-        "\tc1, c2 = p1.copy(), p2.copy()\n",
-        "\t# check for recombination\n",
-        "\tif rand() < r_cross:\n",
-        "\t\t# select crossover point that is not on the end of the string\n",
-        "\t\tpt = randint(1, len(p1)-2)\n",
-        "\t\t# perform crossover\n",
-        "\t\tc1 = p1[:pt] + p2[pt:]\n",
-        "\t\tc2 = p2[:pt] + p1[pt:]\n",
-        "\treturn [c1, c2]\n",
-        " \n",
-        "# mutation operator\n",
-        "def mutation(bitstring, r_mut):\n",
-        "\tfor i in range(len(bitstring)):\n",
-        "\t\t# check for a mutation\n",
-        "\t\tif rand() < r_mut:\n",
-        "\t\t\t# flip the bit\n",
-        "\t\t\tbitstring[i] = 1 - bitstring[i]\n",
-        " \n",
-        "# genetic algorithm\n",
-        "def genetic_algorithm(objective, n_bits, n_iter, n_pop, r_cross, r_mut):\n",
-        "\t# initial population of random bitstring\n",
-        "\tpop = [randint(0, 2, n_bits).tolist() for _ in range(n_pop)]\n",
-        "\t# keep track of best solution\n",
-        "\tbest, best_eval = 0, objective(pop[0])\n",
-        "\t# enumerate generations\n",
-        "\tfor gen in range(n_iter):\n",
-        "\t\t# evaluate all candidates in the population\n",
-        "\t\tscores = [objective(c) for c in pop]\n",
-        "\t\t# check for new best solution\n",
-        "\t\tfor i in range(n_pop):\n",
-        "\t\t\tif scores[i] < best_eval:\n",
-        "\t\t\t\tbest, best_eval = pop[i], scores[i]\n",
-        "\t\t\t\tprint(\">%d, new best f(%s) = %.3f\" % (gen,  pop[i], scores[i]))\n",
-        "\t\t# select parents\n",
-        "\t\tselected = [selection(pop, scores) for _ in range(n_pop)]\n",
-        "\t\t# create the next generation\n",
-        "\t\tchildren = list()\n",
-        "\t\tfor i in range(0, n_pop, 2):\n",
-        "\t\t\t# get selected parents in pairs\n",
-        "\t\t\tp1, p2 = selected[i], selected[i+1]\n",
-        "\t\t\t# crossover and mutation\n",
-        "\t\t\tfor c in crossover(p1, p2, r_cross):\n",
-        "\t\t\t\t# mutation\n",
-        "\t\t\t\tmutation(c, r_mut)\n",
-        "\t\t\t\t# store for next generation\n",
-        "\t\t\t\tchildren.append(c)\n",
-        "\t\t# replace population\n",
-        "\t\tpop = children\n",
-        "\treturn [best, best_eval]\n",
-        " \n",
-        "# define the total iterations\n",
-        "n_iter = 17\n",
-        "# bits\n",
-        "n_bits = 20\n",
-        "# define the population size\n",
-        "n_pop = 16\n",
-        "# crossover rate\n",
-        "r_cross = 0.9\n",
-        "# mutation rate\n",
-        "r_mut = 1.0 / float(n_bits)\n",
-        "# perform the genetic algorithm search\n",
-        "best, score = genetic_algorithm(onemax, n_bits, n_iter, n_pop, r_cross, r_mut)\n",
-        "print('Done!')\n",
-        "print('f(%s) = %f' % (best, score))\n"
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "London  = [0.10,0.75,0.60]\n",
+        "Barcelona = [0.70,0.15,0.35]\n",
+        "Newyork = [0.20,0.10,0.05]\n",
+        "total = London + Barcelona + Newyork\n",
+        "\n",
+        "samples = 100\n",
+        "\n",
+        "# Define an empty vector.\n",
+        "combs = []\n",
+        "\n",
+        "# Get the possible outcomes of number of elements per list.\n",
+        "for i in range(0,2):\n",
+        "    for j in range(0,2):\n",
+        "        for k in range(0,2):\n",
+        "            if(i + j + k == 3):\n",
+        "                combs = combs + [[i,j,k]]\n",
+        "            \n",
+        "# Count of how many elements per group\n",
+        "accum = [0 for x in combs]\n",
+        "\n",
+        "# Perform the experiment a number of times given the sample.\n",
+        "for i in range(samples):\n",
+        "\n",
+        "    # Auxiliary variables.\n",
+        "    totalEnt = [0,0,0]\n",
+        "    \n",
+        "\n",
+        "    # Store the number of elements that belong to each list.\n",
+        "    totalEnt[0] = [x in London for x in [0.10,0.75,0.60]].count(True)\n",
+        "    totalEnt[1] = [x in Barcelona for x in [0.70,0.15,0.35]].count(True)\n",
+        "    totalEnt[2] = [x in Newyork for x in [0.20,0.10,0.05]].count(True)\n",
+        "\n",
+        "# Print the probabilities.\n",
+        "print(\"[elements in London, elements in Barcelona, elements in Newyork]: Probability\")\n",
+        "for i, elem in enumerate(accum):\n",
+        "    print(str(combs[i]) + \": \" + str(elem/samples))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "0h6B57_XBmEc",
-        "outputId": "f92c2751-a184-42d4-ebca-c5d74128f309"
+        "id": "p9Y8TEA2LGCR",
+        "outputId": "e849dfe2-f4b2-49ed-b834-3d6d82a39c4f"
       },
-      "execution_count": 6,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            ">3, new best f([0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0]) = -15.000\n",
-            ">4, new best f([1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0]) = -16.000\n",
-            ">4, new best f([1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1]) = -17.000\n",
-            ">7, new best f([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1]) = -18.000\n",
-            ">10, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0]) = -19.000\n",
-            ">12, new best f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -20.000\n",
-            "Done!\n",
-            "f([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]) = -20.000000\n"
+            "[elements in London, elements in Barcelona, elements in Newyork]: Probability\n",
+            "[1, 1, 1]: 0.0\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "RzHNWZ5ENPJV"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
